name:                hangman
version:             0.1.0.0
synopsis:            Playing Hangman
description:         Tutorial from Haskell Programming from First Principles Chapter 13
homepage:            https://github.com/githubuser/hangman#readme
license:             BSD3
license-file:        LICENSE
author:              Christian Sakai
maintainer:          christianmsakai@gmail
copyright:           2017 Christian Sakai
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  data/dict.txt

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split
